--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -1,9 +1,29 @@
-.testimonial-container {
-     background-color: whitesmoke;
+.service-container {
+     background-color: #DBE8D3;
      margin-top: 100px;
+     /* padding: 100px; */
 }
 
 .card-color{
-     background-color: teal;
+     background-color: #00758fcc;
      color: white;
 }
+
+
+@media only screen and (max-width: 688px) {
+     .service-container {
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+     }
+   }
+   
+   @media only screen and (min-width: 689px) and (max-width: 992px) {
+    .service-container {
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       align-items: center;
+     }
+   }
