two order section designed

--- a/src/components/Testimonials/Testimonial.css
+++ b/src/components/Testimonials/Testimonial.css
@@ -1,6 +1,6 @@
 .service-container {
      background-color: #DBE8D3;
-     margin-top: 100px;
+     /* margin-top: 100px; */
      /* padding: 100px; */
 }
 
