--- a/src/components/Orders/Order.css
+++ b/src/components/Orders/Order.css
@@ -24,7 +24,7 @@
 
    .form-container{
     width: 50%;
-    background-color: goldenrod;
+    background-color: #6B5B95;
     border-radius: 20px;
     /* padding: 30px; */
   }
